--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Ruxsatnamalar</string>
+
+    <string name="permission_required">Notification access is required to display the notification preview.</string>
+    <string name="ok">OK</string>
+    <string name="permission_granted">Permission is granted. You would use the now.</string>
 </resources>
